networking/httproutes/actual-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: actual
  namespace: actual
spec:
  parentRefs:
    - name: main-gateway
      namespace: cert-manager
      sectionName: actual-https
  hostnames:
    - "finance.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: actual
          port: 5006
