networking/httproutes/ai-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ai
  namespace: open-webui
spec:
  parentRefs:
    - name: main-gateway
      namespace: cert-manager
      sectionName: ai-https
  hostnames:
    - "ai.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui-service
          port: 8080
