networking/httproutes/argo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: cert-manager
      sectionName: https
  hostnames:
    - "argo.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-server
          port: 80
---
# HTTP to HTTPS redirect
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-redirect
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: cert-manager
      sectionName: http
  hostnames:
    - "argo.timosur.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
