networking/httproutes/emby-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emby
  namespace: emby
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: cert-manager
      sectionName: emby-https
  hostnames:
    - "emby.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: emby
          port: 8096
