networking/httproutes/garden-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garden
  namespace: garden
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: cert-manager
      sectionName: garden-https
  hostnames:
    - "garden.timosur.com"
  rules:
    # All routes go through nginx auth proxy
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: garden-nginx-auth
          port: 80
