networking/httproutes/pinchflat-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pinchflat
  namespace: pinchflat
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: cert-manager
      sectionName: pinchflat-https
  hostnames:
    - "pinchflat.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pinchflat
          port: 8945
