networking/httproutes/portfolio-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
  namespace: portfolio
spec:
  parentRefs:
    - name: main-gateway
      namespace: cert-manager
      sectionName: portfolio-https
  hostnames:
    - "timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio
          port: 80
