networking/httproutes/seafile-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
  namespace: seafile
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: cert-manager
      sectionName: seafile-https
  hostnames:
    - "file.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /seafdav
      backendRefs:
        - name: seafile
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seafile
          port: 80
