networking/httproutes/vinyl-manager-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vinyl-manager-home
  namespace: vinyl-manager
spec:
  parentRefs:
    - name: envoy-gateway-home
      namespace: envoy-gateway-system
  hostnames:
    - "vinyl.home.timosur.com"
  rules:
    # API routes go to backend
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: vinyl-backend
          port: 8000
    # Everything else goes to frontend
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vinyl-frontend
          port: 3000
