networking/httproutes/zipline-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zipline
  namespace: zipline
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: cert-manager
      sectionName: zipline-https
  hostnames:
    - "zipline.timosur.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zipline
          port: 3000
